--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "wrangler pages deploy dist",
+    "deploy": "tsc -b && vite build && wrangler pages deploy dist",
     "eject": "react-scripts eject"
   },
   "dependencies": {
