まとめてデプロイできるようにする

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
 	"version": "1.0.0",
 	"description": "application to transcribe english podcast",
 	"scripts": {
-		"format": "npx biome format --write"
+		"format": "npx biome format --write",
+		"build": "npm run build --prefix ./frontend",
+		"deploy": "npm run deploy --prefix ./frontend && npm run deploy --prefix ./backend"
 	},
 	"author": "",
 	"license": "ISC"
