--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
 		"lint": "eslint .",
 		"preview": "vite preview",
 		"deploy": "tsc -b && vite build && wrangler pages deploy dist",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"test": "vitest"
 	},
 	"dependencies": {
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-router-dom": "^7.7.1",
+		"vitest": "^3.2.4",
 		"wrangler": "^4.14.4"
 	},
 	"devDependencies": {
