npm run testはダメなのかもしれない

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Tests
         run: |
-          npm run test
+          vitest --prefix ./frontend
 
   deploy:
     name: Deploy
