--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,3 +1,9 @@
+name: Deploy
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   build:
     name: Build
@@ -28,7 +34,7 @@ jobs:
 
       - name: Tests
         run: |
-          vitest --prefix ./frontend
+          npx vitest --prefix ./frontend
 
   deploy:
     name: Deploy
