--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -16,11 +16,14 @@ jobs:
       with:
         node-version: '18.x'
 
-    - name: Install dependencies and run tests
+    - name: Install dependencies
       run: |
         npm install
         npm install --prefix ./frontend
         npm install --prefix ./backend
+
+    - name: Build
+      run: npm run build --prefix ./frontend
   
   test:
     name: Test
@@ -32,4 +35,4 @@ jobs:
 
       - name: Tests
         run: |
-          npx vitest --prefix ./frontend
+          npm run test --prefix ./frontend
