testにもcheckoutを加えてみる

--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -28,9 +28,11 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-    needs: build
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Lint
         run: npx biome check --colors=off
 
