wrangler-actionとかいうのを使ってみる

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -63,13 +63,15 @@ jobs:
           npm install --prefix ./backend
 
       - name: frontend deploy
-        run: npm run deploy --prefix ./frontend
+        uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          command: npm run deploy --prefix ./frontend
         
       - name: backend deploy
-        run: npm run deploy --prefix ./backend
+        uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          command: npm run deploy --prefix ./backend
