--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -67,7 +67,7 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: wrangler pages deploy dist --prefix ./frontend
+          command: pages deploy dist --prefix ./frontend
         
       - name: backend deploy
         uses: cloudflare/wrangler-action@v3
