バージョン設定ミスってた

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -68,7 +68,7 @@ jobs:
       - name: frontend deploy
         uses: cloudflare/wrangler-action@v3
         with:
-          version: '4.14.4'
+          wrangler-version: '4.14.4'
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           command: pages deploy ./frontend/dist --project-name=frontend --branch=main
@@ -76,7 +76,7 @@ jobs:
       - name: backend deploy
         uses: cloudflare/wrangler-action@v3
         with:
-          version: '4.14.4'
+          wrangler-version: '4.14.4'
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           command: deploy --minify ./backend/wrangler.jsonc
