試験的にbackendの認証部を作ってみた

--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
 	"license": "ISC",
 	"devDependencies": {
 		"lefthook": "^1.13.6"
+	},
+	"dependencies": {
+		"dayjs": "^1.11.18",
+		"google-auth-library": "^10.4.1",
+		"googleapis": "^164.0.0",
+		"uuid": "^13.0.0"
 	}
 }
