google OAuthを経てchannelListに遷移するまで

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "podcast-transcriber",
 	"version": "1.0.0",
+	"type": "module",
 	"description": "application to transcribe english podcast",
 	"scripts": {
 		"format": "npx biome format --write",
