--- a/backend/wrangler.jsonc
+++ b/backend/wrangler.jsonc
@@ -18,7 +18,7 @@
 			}
 		],
 		"SESSION_COOKIE_NAME": "session_id",
-		"SESSION_TTL_SECONDS": 604800, // 7 days
+		"SESSION_TTL_SECONDS": 604800
 	},
 	"observability": {
 		"enabled": true,
